@@ -5,6 +5,15 @@
 
 2004-10-20  Roland McGrath  <roland@redhat.com>
 
+	* Makeconfig ($(common-objpfx)shlib-versions.v.i): Check also
+	$(config-sysdirs) for shlib-versions files.
+
+	* Makeconfig ($(common-objpfx)soversions.i): Replace shell loop with
+	use of ...
+	* scripts/soversions.awk: ... this new file.  Collect lib info and
+	match any DEFAULT line before emitting anything, so DEFAULT can come
+	later in the concatenation of shlib-versions files.
+
 	* manual/errno.texi (Error Codes): Add ENOKEY, EKEYEXPIRED,
 	EKEYREVOKED, EKEYREJECTED.
 	* sysdeps/unix/sysv/linux/Versions (libc: GLIBC_2.3.4): New errlist.
